feat: add match details and moment filters
