# docs/openapi/dalm-openapi.yaml
@@ -324,7 +324,8 @@ paths:
           required: false
           schema:
             type: string
-            const: SEARCHING
+            enum: [ALL, SEARCHING, MATCHED, EXPIRED, HIDDEN]
+            default: ALL
         - name: exclude_today
           in: query
           required: false
@@ -1160,7 +1161,7 @@ components:
             - type: 'null'
         status:
           type: string
-          const: SEARCHING
+          enum: [SEARCHING, MATCHED, EXPIRED]
         registered_at:
           type: string
           format: date-time
@@ -1175,6 +1176,19 @@ components:
               minimum: 0
               maximum: 7
             - type: 'null'
+        match_id:
+          oneOf:
+            - type: string
+              format: uuid
+            - type: 'null'
+        matched_at:
+          oneOf:
+            - type: string
+              format: date-time
+            - type: 'null'
+        hidden:
+          type: boolean
+          default: false
 
     MomentListData:
       type: object
